sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:23: error: ';' expected but ',' found.
pots sont alignés dans le bon ordre, le nain se déplace en avant
                                   ^AlgGnomeSort:24: error: ';' expected but symbol literal found.
d'un pot de fleurs, sinon il les échange et se déplace en arrière
 ^AlgGnomeSort:25: error: ';' expected but symbol literal found.
d'un pot de fleur. Condition aux limites : si il n'y a pas de pot
 ^AlgGnomeSort:26: error: ';' expected but ',' found.
de fleurs précédent, le nain avance ; si il n'y a pas de pot suivant
                   ^AlgGnomeSort:26: error: ';' expected but symbol literal found.
de fleurs précédent, le nain avance ; si il n'y a pas de pot suivant
                                             ^AlgGnomeSort:27: error: ';' expected but '.' found.
alors il a terminé sa tâche. 
                           ^